# Devops_training

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: github-actions.yml  release-actions.yml
fastapiapp/: app.py
