[tool.poetry]
name = "fastapiapp"
version = "0.1.0"
description = ""
authors = ["Primous POMALEGNI <primouspomalegni2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
uvicorn = "^0.24.0.post1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
